# api_gateway_rs

./: Cargo.toml  README.md  config.yaml
.kiro/specs/rust-api-gateway/: design.md  requirements.md  tasks.md
benches/: gateway_benchmarks.rs
examples/: run_backend_server.rs
scripts/: run_integration_tests.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/core/: gateway.rs  middleware.rs  mod.rs  request.rs  response.rs  router.rs
src/error/: mod.rs
src/examples/backend_server/: mod.rs  models.rs  multi_instance.rs  routes.rs  server.rs  simple.rs
src/middleware/: logging.rs  logging_examples.rs  mod.rs  timing.rs
src/middleware/auth/: jwt.rs  jwt_middleware.rs  mod.rs  models.rs
src/middleware/cache/: examples.rs  memory_store.rs  mod.rs  models.rs  redis_store.rs
src/middleware/load_balancer/: examples.rs  health_checker.rs  health_checker_tests.rs  mod.rs  strategies.rs  tests.rs
src/models/: mod.rs
src/utils/: mod.rs
tests/: README.md  backend_server_test.rs  health_checker_integration_test.rs  integration_tests.rs  load_tests.rs  redis_integration_tests.rs  test_config.yaml
