[package]
name = "new_api_gateway"
version = "0.1.0"
edition = "2021"
description = "A high-performance API Gateway written in Rust"
authors = ["Kiro"]

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Web framework
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors", "timeout"] }
hyper = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
notify = "5.1"

# Utilities
bytes = "1.4"
futures = "0.3"
async-trait = "0.1"
once_cell = "1.17"
regex = "1.8"
serde_with = "3.0"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
