[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"
description = "A high-performance API Gateway written in Rust"
authors = ["Kiro"]

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Web framework
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors", "timeout"] }
hyper = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4"

# Configuration
config = { version = "0.13", features = ["yaml", "json", "toml"] }
notify = "5.1"
serde_yaml = "0.9"
toml = "0.7"

# Utilities
bytes = "1.4"
futures = "0.3"
async-trait = "0.1"
once_cell = "1.17"
regex = "1.8"
serde_with = "3.0"
httpdate = "1.0"

# Authentication
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.21"

# HTTP client for health checks
reqwest = { version = "0.11", features = ["json"] }

# Redis client
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.12"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
